k8s/ingressController-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  namespace: test-0923
  name: ingress-controller
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:017820660901:certificate/ee99b2df-11ba-49e9-ac88-3a3a1fe05f2f
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: admin.ghtjr.com 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: admin-front-service
              port:
                number: 80
    - host: blog.ghtjr.com 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: user-front-service
              port:
                number: 80
